# Barometer

./: baropublisher.cpp
Deployable_ESP/: UDPComm.cpp  UDPComm.h
Deployable_Setup/Deployable_ESP/: Deployable_ESP.ino  UDPComm.cpp
Deployable_Setup/Deployable_ESP/Old/: Deployable_ESP.ino
Deployable_Setup/Deployable_Teensy/: Deployable_Teensy.ino
OPI/: OPI_IMU.cpp
Tethered_Teensy/: BerryIMU_v3.cpp  main.cpp
archive/Deployable_Setup/Deployable_ESP/: BerryIMU_v3.cpp  Deployable_ESP.ino
archive/Deployable_Setup/Deployable_Teensy/: BerryIMU_v3.cpp  Deployable_Teensy.ino
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/barometer/lib/barometer/: talker
ros2_ws/install/barometer/share/barometer/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/barometer/share/barometer/cmake/: barometerConfig.cmake
ros2_ws/install/sub/lib/sub/: listener
ros2_ws/install/sub/share/sub/: package.sh
ros2_ws/log/: latest_build
ros2_ws/src/barometer/: CMakeLists.txt  copyCodeToPi.sh
ros2_ws/src/barometer/include/: Barometer.hpp
ros2_ws/src/barometer/src/: Barometer.cpp  OPI_IMU.cpp  barometer_node.cpp  baropublisher.cpp
ros2_ws/src/sub/: CMakeLists.txt  package.xml
ros2_ws/src/sub/src/: barosubscriber.cpp
systemd/: base_baro.service  base_baro.sh  copyToPi.sh
